; ModuleID = '/home/carl/AnghaBench/openssl/crypto/pkcs7/extr_pk7_doit.c_PKCS7_find_digest.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/pkcs7/extr_pk7_doit.c_PKCS7_find_digest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BIO_TYPE_MD = common dso_local global i32 0, align 4
@PKCS7_F_PKCS7_FIND_DIGEST = common dso_local global i32 0, align 4
@PKCS7_R_UNABLE_TO_FIND_MESSAGE_DIGEST = common dso_local global i32 0, align 4
@ERR_R_INTERNAL_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32**, i32*, i32)* @PKCS7_find_digest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @PKCS7_find_digest(i32** %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32** %0, i32*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  br label %8

8:                                                ; preds = %37, %3
  %9 = load i32*, i32** %6, align 8
  %10 = load i32, i32* @BIO_TYPE_MD, align 4
  %11 = call i32* @BIO_find_type(i32* %9, i32 %10)
  store i32* %11, i32** %6, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %8
  %15 = load i32, i32* @PKCS7_F_PKCS7_FIND_DIGEST, align 4
  %16 = load i32, i32* @PKCS7_R_UNABLE_TO_FIND_MESSAGE_DIGEST, align 4
  %17 = call i32 @PKCS7err(i32 %15, i32 %16)
  store i32* null, i32** %4, align 8
  br label %40

18:                                               ; preds = %8
  %19 = load i32*, i32** %6, align 8
  %20 = load i32**, i32*** %5, align 8
  %21 = call i32 @BIO_get_md_ctx(i32* %19, i32** %20)
  %22 = load i32**, i32*** %5, align 8
  %23 = load i32*, i32** %22, align 8
  %24 = icmp eq i32* %23, null
  br i1 %24, label %25, label %29

25:                                               ; preds = %18
  %26 = load i32, i32* @PKCS7_F_PKCS7_FIND_DIGEST, align 4
  %27 = load i32, i32* @ERR_R_INTERNAL_ERROR, align 4
  %28 = call i32 @PKCS7err(i32 %26, i32 %27)
  store i32* null, i32** %4, align 8
  br label %40

29:                                               ; preds = %18
  %30 = load i32**, i32*** %5, align 8
  %31 = load i32*, i32** %30, align 8
  %32 = call i32 @EVP_MD_CTX_type(i32* %31)
  %33 = load i32, i32* %7, align 4
  %34 = icmp eq i32 %32, %33
  br i1 %34, label %35, label %37

35:                                               ; preds = %29
  %36 = load i32*, i32** %6, align 8
  store i32* %36, i32** %4, align 8
  br label %40

37:                                               ; preds = %29
  %38 = load i32*, i32** %6, align 8
  %39 = call i32* @BIO_next(i32* %38)
  store i32* %39, i32** %6, align 8
  br label %8

40:                                               ; preds = %35, %25, %14
  %41 = load i32*, i32** %4, align 8
  ret i32* %41
}

declare dso_local i32* @BIO_find_type(i32*, i32) #1

declare dso_local i32 @PKCS7err(i32, i32) #1

declare dso_local i32 @BIO_get_md_ctx(i32*, i32**) #1

declare dso_local i32 @EVP_MD_CTX_type(i32*) #1

declare dso_local i32* @BIO_next(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
